[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Subsurface_Web_Site"
version = "0.1.0"
authors = [
  {name = "Dirk Hohndel", email = "dirk@subsurface-divelog.org"}
]
maintainers = [
  {name = "Dirk Hohndel", email = "dirk@subsurface-divelog.org"}
]
description = "Subsurface Website"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dynamic = ["readme", "dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
readme = {file = "README.md"}
dependencies = {file = "requirements.txt"}

